kubernetes/infra/minio/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2023-09-07T02-05-02Z
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http-minio
              protocol: TCP
            - containerPort: 9001
              name: minio-console
              protocol: TCP
          args:
            - server
            - /storage
            - "--console-address"
            - ":9001"
          volumeMounts:
            - mountPath: /storage
              name: minio-pvc
      volumes:
        - name: minio-pvc
          persistentVolumeClaim:
            claimName: minio-pvc
        - name: minio-credentials
          secret:
            secretName: minio-credentials
