kubernetes/infra/minio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
  - name: http-minio
    protocol: TCP
    port: 9000
    targetPort: http-minio
  - name: minio-console
    protocol: TCP
    port: 9001
    targetPort: minio-console
