kubernetes/infra/minio/ingress.yml

---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: minio
          port: 9000
    - kind: Rule
      match: Host(`minio-console.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: minio
          port: 9001
  tls:
    secretName: minio-certificate
